Sept 25th code update #2: - Creation of db.js. - Connected db.js to index.html. - Modified service-work to include the introduction of db.js, as well as removing app.bundle.js. - Suspension of the Webpack effort. - To-do: documentation.

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <!-- <script src="index.js"></script> -->
-  <script src="dist/app.bundle.js"></script>
+  <script src="db.js"></script>
+  <script src="index.js"></script>
+  <!-- <script src="dist/app.bundle.js"></script> -->
   <script type="text/javascript">
     (function () {
       if ("serviceWorker" in navigator) {
